src/app/features/tasks/task/task.component.scss
@import '../../../../variables';
@import '~angular-material-css-vars/public-util';

$task-shadow: $shadow-card-shadow;
$sub-task-shadow: $whiteframe-shadow-1dp;
$task-active-shadow: $whiteframe-shadow-6dp;
$task-first-line-min-height: 40px;
$task-icon-default-opacity: 0.7;
$task-current-task-zoom: 1.0178571428, 1;
$task-inner-padding-top-bottom: 4px;
$task-is-done-dim-opacity: 0.3;

// z-indexes
$z-drag-handle: 1;
$z-task-title: 4;
$z-btn: 4;
$z-time-wrapper: 4;
$z-btn-hover: 5;
$z-hover-controls: 6;
$z-progress-bar: 7;

$z-check-done: 11;
$z-first-line-controls-hover: 12;
$z-swipe-block: 13;

$z-is-current-host: 20;
$z-focus-host: 20;

$z-toggle-sub-task-btn: 21;
$z-drag-over-msg: 22;
$z-task-title-focus: 23;

$z-time-btn-svg-wrapper: 5555;

@import './task.component.mixins';


// TASK BOX STYLES
// ---------------
// NOTE: needs to come first to be overwritten by :host.isCurrent
// NOTE: needs to be very light, because we're on a lighter background for the dark theme
:host-context(.isDarkTheme) {
  color: $dark-theme-text-color-most-intense;
}

:host {
  display: block;
  position: relative;

  color: $light-theme-text-color;

  &.isCurrent {
    z-index: $z-is-current-host;
    color: mat-css-contrast-color(600);
  }

  &:focus {
    z-index: $z-focus-host;
    outline: none;
  }
}


.inner-wrapper {
  position: relative;
  padding: $task-inner-padding-top-bottom 0;
  margin-bottom: 0;

  //&.isCurrent,
  &.isAdditionalInfoOpen {
    margin-top: $s*2;
    margin-bottom: $s*2;
  }
}

.box {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  transition: $transition-standard;
  transition-property: transform;
  //border-radius: $card-border-radius;
  border: 1px solid $light-theme-extra-border-color;
  border-bottom-color: transparent;

  @include mq(xs) {
    box-shadow: $task-shadow;
  }

  :host-context(.sub-tasks) & {
    @include mq(xs) {
      box-shadow: $sub-task-shadow;
    }
  }

  @include darkTheme {
    border-color: $dark-theme-bg;
    border-bottom-color: transparent;
  }

  @include isHostFocus('.inner-wrapper') {
    border-radius: $card-border-radius;

    @include mq(xs) {
      border: 1px solid $c-accent !important;
      box-shadow: $whiteframe-shadow-5dp;
      left: -3px;
      right: -3px;
    }
  }

  @include isCurrent {
    transform: scale($task-current-task-zoom);
    box-shadow: $task-active-shadow;
    border-color: transparent;
    border-radius: $card-border-radius;
    background: $c-primary-600;
  }

  :host:first-child > .inner-wrapper > & {
    border-top-left-radius: $card-border-radius;
    border-top-right-radius: $card-border-radius;
  }

  :host:last-child > .inner-wrapper > & {
    border-bottom-left-radius: $card-border-radius;
    border-bottom-right-radius: $card-border-radius;
  }

  :host-context(.isLightTheme):last-child > .inner-wrapper > & {
    @include mq(xs, max) {
      border-bottom-color: $light-theme-extra-border-color;
    }
  }

  :host-context(.isDarkTheme):last-child > .inner-wrapper > & {
    @include mq(xs, max) {
      //border-bottom-color: $dark-theme-extra-border-color;
      //border-bottom-color: $dark-theme-bg;
      border-bottom-color: rgb(55, 55, 55);
    }
  }

  .inner-wrapper:not(.isCurrent) > .box {
    box-shadow: none !important;
    border-color: transparent;
    background: transparent !important;
  }

  &.focus {
    > .inner-wrapper:not(.isCurrent) > .box {
      border-color: $c-accent !important;
    }
  }

  :host-context(.isReducedTheme):focus > .inner-wrapper:not(.isCurrent) > & {
    border-color: $c-accent !important;
  }

  :host-context(.isReducedTheme) > .inner-wrapper:not(.isCurrent) > & {
    box-shadow: none !important;
    border-color: transparent;
    background: transparent !important;
  }
}


.sub-tasks {
  margin: $s 0 $s $s*3;
  position: relative;

  @include mq(xs) {
    //margin: $s $s*2 $s $s*3;
    margin: $s 0 $s $s*5;
  }
}


.first-line {
  position: relative;
  display: flex;
  align-items: stretch;
  flex-wrap: nowrap;
  user-select: none;
  justify-content: space-between;
  min-height: $task-first-line-min-height;
  touch-action: pan-y;

  @include mq(xs, max) {
    flex-wrap: wrap;
    justify-content: flex-end;
  }
}


.title-and-left-btns-wrapper {
  display: flex;
  flex-wrap: nowrap;
  align-items: center;
  justify-content: center;
  min-height: 36px;
  flex-grow: 1;
  flex-basis: 70%;
  @include mq(xs, max) {
    //margin-bottom: 5px;
    //flex-shrink: 0;
    flex-basis: 50%;
  }

  @include isDoneForFirstLine {
    opacity: $task-is-done-dim-opacity;
  }
}

// CONTROLS
// --------
.all-controls-wrapper {
  display: flex;
  flex-flow: row;
  position: relative;
  margin-left: $s;
  align-items: stretch;
}

.controls {
  display: flex;
  flex-direction: row;
  align-items: stretch;
  text-align: right;
  margin-right: 2px;
  position: relative;

  button {
    margin-top: auto;
    margin-bottom: auto;
  }

  @include mq(xs, max) {
    white-space: normal;
    margin-left: 5px;
  }
}
/* ... */

